--- a/majdnemkesz/package.json
+++ b/majdnemkesz/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "cd server && npm install && node index.js",
+    "start": "cd server && npm install && node index.js --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -43,6 +43,5 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
-  },
-  "proxy": "http://localhost:3000/"
+  }
 }
